--- a/app/src/main/res/layout/activity_live_video_player_new.xml
+++ b/app/src/main/res/layout/activity_live_video_player_new.xml
@@ -8,13 +8,14 @@
     <RelativeLayout
         android:id="@+id/rl_video"
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/root_layout_video_comment"
         android:layout_below="@+id/top_view">
 
         <android.opengl.GLSurfaceView
             android:id="@+id/video_view"
             android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true" />
@@ -96,37 +97,7 @@
         </RelativeLayout>
 
 
-
     </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rl_like"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_below="@+id/rl_video">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/like_active"
-            android:layout_marginLeft="10dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Gift"
-            android:textColor="@color/white"
-            android:layout_marginRight="10dp"
-            android:layout_alignParentRight="true"/>
-
-    </RelativeLayout>
-
-    <ListView
-        android:id="@+id/comment_list"
-        android:layout_below="@+id/rl_like"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </ListView>
 
     <RelativeLayout
         android:id="@+id/top_view"
@@ -170,10 +141,158 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/root_layout_video_comment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+        <!--bottom -->
+        <RelativeLayout
+            android:id="@+id/potrait_video_comment"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:orientation="vertical"
+            android:visibility="visible">
+
+            <RelativeLayout
+                android:id="@+id/rl_like"
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
+
+                <ImageView
+                    android:id="@+id/potrait_post_like"
+                    android:layout_width="35dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/like_active" />
+
+                <TextView
+                    android:id="@+id/potrai_post_gift"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@color/colorselecte"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:text="Gift"
+                    android:textColor="@color/white" />
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/comment_list_li"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:visibility="visible"
+                android:layout_below="@+id/rl_like"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/listView_comment"
+                    android:layout_width="fill_parent"
+                    android:layout_above="@+id/view_01"
+                    android:layout_below="@+id/top_view"
+                    android:layout_margin="10dp"
+                    android:layout_height="fill_parent">
+                </android.support.v7.widget.RecyclerView>
+
+                <!---->
+                <!--<ListView-->
+                    <!--android:id="@+id/comment_list"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:divider="@color/white"-->
+                    <!--android:dividerHeight="1dp">-->
+                <!--</ListView>-->
+            </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/potrait_post_comments"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_below="@+id/comment_list_li"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
+                android:layout_centerHorizontal="true"
+                android:background="@color/colorselecte"
+                android:gravity="center_vertical"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:text="Comments"
+                android:textColor="@color/white" />
+
+        </RelativeLayout>
+        <!--for landscape-->
+        <LinearLayout
+            android:id="@+id/landscape_video_comment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_below="@+id/rl_video">
+
+                <ImageView
+                    android:id="@+id/landscape_post_like"
+                    android:layout_width="35dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/like_active" />
+
+                <TextView
+                    android:id="@+id/landscape_post_comments"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@color/colorselecte"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:text="Comments"
+                    android:textColor="@color/white" />
+
+
+                <TextView
+                    android:id="@+id/landscape_post_gift"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@color/colorselecte"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:text="Gift"
+                    android:textColor="@color/white" />
+
+            </RelativeLayout>
+
+
+        </LinearLayout>
+    </RelativeLayout>
+
+
     <!--- playvideo-->
 
     <!-- Loader-->
-
 
 
 </RelativeLayout>
