--- a/app/src/main/res/layout/activity_live_video_player_new.xml
+++ b/app/src/main/res/layout/activity_live_video_player_new.xml
@@ -6,58 +6,15 @@
     android:background="@color/black">
 
     <!--Top view-->
-    <RelativeLayout
-        android:id="@+id/top_view"
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
-
-        <ImageView
-            android:id="@+id/back_player"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/back" />
-
-        <ImageView
-            android:id="@+id/view_360"
-            android:layout_width="54dp"
-            android:layout_height="24dp"
-            android:layout_alignTop="@+id/view_vr"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_toLeftOf="@+id/view_vr"
-            android:layout_toStartOf="@+id/view_vr"
-            android:background="@drawable/btn_360" />
-
-
-        <ImageView
-            android:id="@+id/view_vr"
-            android:layout_width="32dp"
-            android:layout_height="24dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/btn_vr" />
-
-
-    </RelativeLayout>
     <!--Video view-->
 
     <RelativeLayout
         android:id="@+id/rl_video"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_above="@+id/portait_full_mood">
 
-        <android.opengl.GLSurfaceView
+        <com.headsupseven.corp.customview.MeasureGLSurfaceView
             android:id="@+id/video_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -108,8 +65,8 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignTop="@+id/seek_video"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
                 android:src="@drawable/video_play" />
 
 
@@ -118,9 +75,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="48dp"
-                android:layout_toEndOf="@+id/video_play_paush"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_toLeftOf="@+id/image_ic_full_video"
                 android:layout_toRightOf="@+id/video_play_paush"
                 android:max="100"
@@ -143,14 +99,14 @@
                 android:visibility="visible" />
 
             <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_alignParentBottom="true"-->
-                <!--android:layout_centerHorizontal="true"-->
-                <!--android:layout_marginBottom="5dp"-->
-                <!--android:text="Comments"-->
-                <!--android:textColor="@color/white"-->
-                <!--android:textSize="14sp" />-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_marginBottom="5dp"-->
+            <!--android:text="Comments"-->
+            <!--android:textColor="@color/white"-->
+            <!--android:textSize="14sp" />-->
 
             <ImageView
                 android:id="@+id/image_ic_full_video"
@@ -158,11 +114,52 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/ic_full_video" />
 
         </RelativeLayout>
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/top_view"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
+
+        <ImageView
+            android:id="@+id/back_player"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/back" />
+
+        <ImageView
+            android:id="@+id/view_360"
+            android:layout_width="54dp"
+            android:layout_height="24dp"
+            android:layout_alignTop="@+id/view_vr"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_toLeftOf="@+id/view_vr"
+            android:layout_toStartOf="@+id/view_vr"
+            android:background="@drawable/btn_360" />
+
+
+        <ImageView
+            android:id="@+id/view_vr"
+            android:layout_width="32dp"
+            android:layout_height="24dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/btn_vr" />
 
 
     </RelativeLayout>
